# jp2k

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: decode.rs
openjpeg/install/lib/: openjp2.lib
openjpeg/install/lib/openjpeg-2.3/: OpenJPEGConfig.cmake  OpenJPEGTargets.cmake
src/: err.rs  lib.rs
